updated for diff